text wrap fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,12 +20,12 @@ a {
     width: 70%;
     margin: 0 auto;
     text-align: center;
+
 }
 
 .rules {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-size: 24px;
+    white-space: pre-wrap;
 }
 
 .footerText {
